--- a/styles/style.css
+++ b/styles/style.css
@@ -5,29 +5,36 @@
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: 60px auto 47px;
-    grid-template-areas: "header header header" ". main ." "footer footer footer";
+    height: 100vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 60px 1fr 47px;
+    grid-template-areas: "header" "main" "footer";
 }
 
-.flex {
+.flex-column {
     display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
 }
 
 header {
     display: flex;
     width: 100%;
+    background-color: tomato;
 }
 
 .left {
     background-color: var(--debug2);
-    display: inherit;
     float: left;
 }
 
 .right {
     background-color: var(--debug);
-    display: inherit;
     float: right;
 }
 
@@ -38,6 +45,7 @@ main {
 }
 
 footer {
-    width: 100;
     grid-area: footer;
+    display: flex;
+    background-color: tomato;
 }
