--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,12 @@
     --debug2: blue;
     --google-darken: hsl(0, 0%, 92%);
     --off-black: #222;
+    --footer: #70757a;
+}
+
+body, input, button {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -31,11 +37,13 @@ a {
 }
 
 header {
+    padding: 1rem;
     width: 100%;
 }
 
 .left {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     height: 100%;
     float: left;
@@ -43,6 +51,7 @@ header {
 
 .right {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     height: 100%;
     float: right;
@@ -55,6 +64,12 @@ main {
 }
 
 footer {
+    padding: 1rem;
     grid-area: footer;
     background-color: var(--google-darken);
+}
+
+.footer>a {
+    color: var(--footer);
+    margin: 0 1rem;
 }
