--- a/styles/style.css
+++ b/styles/style.css
@@ -9,12 +9,32 @@
 body, input, button {
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
+    color: var(--off-black);
 }
 
 a {
     text-decoration: none;
     color: var(--off-black);
     margin: 0 5px;
+}
+
+.text-platform {
+    margin: 2rem;
+    border: 1px solid hsl(0, 0%, 85%);
+    border-radius: 5000px;
+    padding: 0.5rem;
+    width: 500px;
+}
+
+.text-platform:hover {
+    border: 1px solid white;
+    box-shadow: 0 1px 5px rgb(143, 143, 143);
+}
+
+input[type="text"] {
+    border: none;
+    outline: none;
+    width: 100%;
 }
 
 .grid {
@@ -34,6 +54,7 @@ a {
 .flex-row {
     display: flex;
     flex-direction: row;
+    margin: auto;
 }
 
 header {
@@ -60,6 +81,7 @@ header {
 main {
     display: flex;
     margin: auto;
+    margin-top: 25%;
     grid-area: main;
 }
 
