--- a/styles/style.css
+++ b/styles/style.css
@@ -23,8 +23,10 @@ a:hover {
     color: var(--off-black);
 }
 
+/* stylize the search field */
+
 .text-platform {
-    margin: 2rem;
+    margin: 1.5rem;
     border: 1px solid hsl(0, 0%, 85%);
     border-radius: 5000px;
     padding: 0.5rem;
@@ -42,12 +44,34 @@ input[type="text"] {
     width: 100%;
 }
 
+/* stylize the buttons */
+
+input[type="submit"] {
+    background-color: #f8f9fa;
+    border-radius: 5px;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    margin: 0.4rem;
+    border: 1px solid white;
+}
+
+input[type="submit"]:hover {
+    border: 1px solid hsl(0, 0%, 85%);
+    box-shadow: 0 1px 1px hsl(0, 0%, 80%);
+}
+
 .grid {
     display: grid;
     height: 100vh;
     grid-template-columns: auto;
     grid-template-rows: 60px 1fr 47px;
     grid-template-areas: "header" "main" "footer";
+}
+
+main {
+    display: flex;
+    margin: auto;
+    margin-top: 250px;
+    grid-area: main;
 }
 
 .flex-column {
@@ -81,13 +105,6 @@ header {
     align-items: center;
     height: 100%;
     float: right;
-}
-
-main {
-    display: flex;
-    margin: auto;
-    margin-top: 235px;
-    grid-area: main;
 }
 
 footer {
