--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ a:hover {
 
 .text-platform:hover {
     border: 1px solid white;
-    box-shadow: 0 1px 5px rgb(143, 143, 143);
+    box-shadow: 0 1px 5px hsl(0, 0%, 70%);
 }
 
 input[type="text"] {
