Readjust height to scale with vh

--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@ input[type="submit"]:hover {
 main {
     display: flex;
     margin: auto;
-    margin-top: 250px;
+    margin-top: 10%;
     grid-area: main;
 }
 
