Add a sign in button

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     --debug: red;
     --debug2: blue;
     --google-darken: hsl(0, 0%, 92%);
+    --google-blue: #3275e0;
     --off-black: #222;
     --footer: #70757a;
 }
@@ -23,6 +24,21 @@ a:hover {
     color: var(--off-black);
 }
 
+/* Customize the bootstrap sign in button */
+
+.btn-custom {
+    background-color: var(--google-blue);
+    font-size: 14px;
+    padding: 0.4rem 1.4rem;
+}
+
+.btn-custom:hover {
+    background-color: hsla(217, 74%, 54%, 0.90);
+    font-size: 14px;
+    padding: 0.4rem 1.4rem;
+    box-shadow: 0 0 3px rgba(51, 118, 225, 0.37);
+}
+
 #google-logo {
     margin: auto;
 }
@@ -36,8 +52,8 @@ a:hover {
     margin: 1.5rem;
     border: 1px solid hsl(0, 0%, 85%);
     border-radius: 5000px;
-    padding: 0.5rem;
-    width: 500px;
+    padding: 0.4rem;
+    width: 580px;
 }
 
 .text-platform:hover {
@@ -46,7 +62,7 @@ a:hover {
 }
 
 #search-icon {
-    margin: 0.4rem;
+    margin: 0 0.5rem;
     margin-right: 0.7rem;
     color: hsl(0, 0%, 78%);
 }
@@ -55,7 +71,7 @@ a:hover {
     margin: 0.4rem;
     margin-left: 0.7rem;
     margin-right: 0.7rem;
-    color: #4285F4;
+    color: var(--google-blue);
     font-size: 130%;
 }
 
@@ -91,7 +107,7 @@ input[type="submit"]:hover {
 main {
     display: flex;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 20vh;
     grid-area: main;
 }
 
