--- a/styles/style.css
+++ b/styles/style.css
@@ -15,13 +15,13 @@ body, input, button {
 
 a {
     text-decoration: none;
-    color: var(--off-black);
+    color: var(--off-black) !important;
     margin: 0 10px;
 }
 
 a:hover {
     text-decoration: underline;
-    color: var(--off-black);
+    color: var(--off-black) !important;
 }
 
 .circle-dropdown {
